// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the CardWrapper component should accept a backgroundColor 1`] = `
<div
  className="CardWrapper__StyledCard-sc-1t3lqai-0 faYqrP"
>
  Boom!
</div>
`;

exports[`the CardWrapper component should accept additional props 1`] = `
<div
  className="CardWrapper__StyledCard-sc-1t3lqai-0 kcdMke"
  role="article listitem"
>
  Boom!
</div>
`;

exports[`the CardWrapper component should accept and render passed in styles 1`] = `
<div
  className="CardWrapper__StyledCard-sc-1t3lqai-0 kcdMke"
  style={
    Object {
      "paddingTop": "56.25%",
      "width": "100%",
    }
  }
>
  Boom!
</div>
`;

exports[`the CardWrapper component should render 1`] = `
<div
  className="CardWrapper__StyledCard-sc-1t3lqai-0 kcdMke"
>
  Boom!
</div>
`;
